--- a/components/dashboardsidebar.html
+++ b/components/dashboardsidebar.html
@@ -4,6 +4,7 @@
     <a href="accounts.php" class="list-group-item list-group-item-action">Account</a>
     <a href="edit_profile.php" class="list-group-item list-group-item-action">Edit Profile</a>
     <a href="change_password.php" class="list-group-item list-group-item-action">Change Password</a>
+    <a href="pinsuccess.php" class="list-group-item list-group-item-action">pinsuccess</a>
   </div>
 
   <a href="logout.php" class="btn btn-outline-danger w-100 mt-3">
